# docs/openapi.yaml
@@ -653,6 +653,16 @@ paths:
           in: query
           name: group
           required: false
+        - schema:
+            type: string
+            enum:
+              - not_applicable
+              - pending
+              - delivered
+              - failed
+          in: query
+          name: signalStatus
+          required: false
       responses:
         "200":
           description: Default Response
@@ -730,6 +740,13 @@ paths:
                   pattern: ^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$
                 group:
                   type: string
+                signalStatus:
+                  type: string
+                  enum:
+                    - not_applicable
+                    - pending
+                    - delivered
+                    - failed
                 inputVariables:
                   type: array
                   items:
@@ -882,6 +899,21 @@ paths:
         "200":
           description: Default Response
   /tasks/{id}/cancel:
+    post:
+      tags:
+        - Tasks
+      parameters:
+        - schema:
+            type: string
+            format: uuid
+            pattern: ^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$
+          in: path
+          name: id
+          required: true
+      responses:
+        "200":
+          description: Default Response
+  /tasks/{id}/retry-signal:
     post:
       tags:
         - Tasks
